k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: 418272792536.dkr.ecr.us-east-1.amazonaws.com/user-service:latest
        ports:
        - containerPort: 3002
